<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTextIcons"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="363dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/logotipo" />

        <EditText
            android:id="@+id/editTextIngresoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/main_email_placeholder"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextIngresoPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextIngresoEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/main_password_placeholder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIngresoIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextIngresoPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimary"
            android:onClick="buttonIngresar_Click"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/main_button_ingresar"
            android:textColor="@color/colorTextIcons" />

        <TextView
            android:id="@+id/textViewIngresoLinkRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonIngresoIngresar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="textViewLinkRegistro_Click"
            android:text="@string/main_link_registro" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>